--- a/coherence-addon-core/pom.xml
+++ b/coherence-addon-core/pom.xml
@@ -90,10 +90,9 @@
 		<dependency>
 			<groupId>org.apache.logging.log4j</groupId>
 			<artifactId>log4j-slf4j-impl</artifactId>
-			<version>2.13.0</version>
+            <version>[2.17.1,)</version>
 		</dependency>
 		
-
 		<dependency>
 			<groupId>org.apache.kafka</groupId>
 			<artifactId>connect-api</artifactId>
@@ -111,7 +110,7 @@
 		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
-			<version>4.13.1</version>
+			<version>[4.13.1,)</version>
 			<scope>test</scope>
 		</dependency>
 
