--- a/geode-addon-core/pom.xml
+++ b/geode-addon-core/pom.xml
@@ -26,7 +26,7 @@
 
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-		<geode.version>1.13.1</geode.version>
+		<geode.version>1.14.2</geode.version>
 		<spring.version>5.2.1.RELEASE</spring.version>
 		<avro.version>1.9.2</avro.version>
 		<skipTests>true</skipTests>
@@ -93,7 +93,7 @@
 		<dependency>
 			<groupId>org.apache.logging.log4j</groupId>
 			<artifactId>log4j-slf4j-impl</artifactId>
-			<version>2.13.0</version>
+            <version>[2.17.1,)</version>
 		</dependency>
 
 		<!-- Spring -->
@@ -154,7 +154,7 @@
 		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
-			<version>4.13.1</version>
+			<version>[4.13.1,)</version>
 			<scope>test</scope>
 		</dependency>
 
