--- a/padogrid-all/pom.xml
+++ b/padogrid-all/pom.xml
@@ -26,7 +26,7 @@
 
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-		<geode.version>1.11.0</geode.version>
+		<geode.version>1.14.2</geode.version>
 		<spring.version>5.2.1.RELEASE</spring.version>
 		<skipTests>true</skipTests>
 	</properties>
@@ -59,7 +59,7 @@
 		<dependency>
 			<groupId>org.apache.logging.log4j</groupId>
 			<artifactId>log4j-slf4j-impl</artifactId>
-			<version>2.13.0</version>
+            <version>[2.17.1,)</version>
 		</dependency>
 
 		<!-- Spring -->
@@ -87,7 +87,7 @@
 		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
-			<version>4.13.1</version>
+			<version>[4.13.1,)</version>
 			<scope>test</scope>
 		</dependency>
 
